--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ steps:
     docker run \
       --rm \
       -v ${PWD}:${PWD} \
+      -w ${PWD} \
       -e PACT_BROKER_BASE_URL \
       -e PACT_BROKER_TOKEN pactfoundation/pact-cli:latest \
       broker publish \
