--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,10 @@
 pool:
   vmImage: ubuntu-latest
 
+variables:
+  - name: GIT_BRANCH
+    value: $[replace(variables['Build.SourceBranch'], 'refs/heads/', '')]
+
 steps:
 - script: |
     dotnet test tests
