--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,48 +22,52 @@ steps:
     dotnet test tests
   displayName: ✅  Test
 
-- script: |
-    docker run \
-      --rm \
-      -v ${PWD}:${PWD} \
-      -w ${PWD} \
-      -e PACT_BROKER_BASE_URL \
-      -e PACT_BROKER_TOKEN pactfoundation/pact-cli:latest \
-      broker publish \
-          pacts \
-        --consumer-app-version ${GIT_COMMIT} \
-        --branch ${GIT_BRANCH} \
-        --build-url ${BUILD_URI}
-  displayName: ✉️  Publish Pacts
-  env:
-    PACT_BROKER_TOKEN: $(PACT_BROKER_TOKEN)
+- template: templates/azure_pact_publish.yml
+- template: templates/azure_pact_can_i_deploy.yml
+- template: templates/azure_pact_record_deployment.yml
 
-- script: |
-    docker run \
-      --rm \
-      -v ${PWD}:${PWD} \
-      -e PACT_BROKER_BASE_URL \
-      -e PACT_BROKER_TOKEN pactfoundation/pact-cli:latest \
-      broker can-i-deploy \
-        --pacticipant ${PACTICIPANT} \
-        --version ${GIT_COMMIT} \
-        --to-environment production \
-    	  --retry-while-unknown 5 \
-    	  --retry-interval 10
-  displayName: 🎛  Can I deploy?
-  env:
-    PACT_BROKER_TOKEN: $(PACT_BROKER_TOKEN)
+# - script: |
+#     docker run \
+#       --rm \
+#       -v ${PWD}:${PWD} \
+#       -w ${PWD} \
+#       -e PACT_BROKER_BASE_URL \
+#       -e PACT_BROKER_TOKEN pactfoundation/pact-cli:latest \
+#       broker publish \
+#           pacts \
+#         --consumer-app-version ${GIT_COMMIT} \
+#         --branch ${GIT_BRANCH} \
+#         --build-url ${BUILD_URI}
+#   displayName: ✉️  Publish Pacts
+#   env:
+#     PACT_BROKER_TOKEN: $(PACT_BROKER_TOKEN)
 
-- script: |
-    docker run \
-      --rm \
-      -v ${PWD}:${PWD} \
-      -e PACT_BROKER_BASE_URL \
-      -e PACT_BROKER_TOKEN pactfoundation/pact-cli:latest \
-      broker record_deployment \
-          --pacticipant ${PACTICIPANT} \
-          --version ${GIT_COMMIT} \
-          --environment production
-  displayName: 🚀  Deploy
-  env:
-    PACT_BROKER_TOKEN: $(PACT_BROKER_TOKEN)
+# - script: |
+#     docker run \
+#       --rm \
+#       -v ${PWD}:${PWD} \
+#       -e PACT_BROKER_BASE_URL \
+#       -e PACT_BROKER_TOKEN pactfoundation/pact-cli:latest \
+#       broker can-i-deploy \
+#         --pacticipant ${PACTICIPANT} \
+#         --version ${GIT_COMMIT} \
+#         --to-environment production \
+#     	  --retry-while-unknown 5 \
+#     	  --retry-interval 10
+#   displayName: 🎛  Can I deploy?
+#   env:
+#     PACT_BROKER_TOKEN: $(PACT_BROKER_TOKEN)
+
+# - script: |
+#     docker run \
+#       --rm \
+#       -v ${PWD}:${PWD} \
+#       -e PACT_BROKER_BASE_URL \
+#       -e PACT_BROKER_TOKEN pactfoundation/pact-cli:latest \
+#       broker record_deployment \
+#           --pacticipant ${PACTICIPANT} \
+#           --version ${GIT_COMMIT} \
+#           --environment production
+#   displayName: 🚀  Deploy
+#   env:
+#     PACT_BROKER_TOKEN: $(PACT_BROKER_TOKEN)
