--- a/templates/azure_pact_publish.yml
+++ b/templates/azure_pact_publish.yml
@@ -8,7 +8,7 @@ steps:
       -e PACT_BROKER_TOKEN pactfoundation/pact-cli:latest \
       broker publish \
           pacts \
-        --consumer-app-version ${GIT_COMMIT} \
+        --consumer-app-version ${COMMIT} \
         --branch ${GIT_BRANCH} \
         --build-url ${BUILD_URI}
   displayName: ✉️  Publish Pacts
