ci(azure): test templates

--- a/templates/azure_pact_publish_with_params.yml
+++ b/templates/azure_pact_publish_with_params.yml
@@ -39,7 +39,7 @@ parameters:
 #     value: '$(System.CollectionUri)$(System.TeamProject)/_build/results?buildId=$(Build.BuildId)'
 
 steps:
-- script: >
+- script: |
     ls
     pwd
     ./templates/publishPactFiles.sh
