ci(azure): test templates

--- a/templates/azure_pact_publish_with_params.yml
+++ b/templates/azure_pact_publish_with_params.yml
@@ -40,7 +40,8 @@ parameters:
 
 steps:
 - script: |
-    ls
+    ls ./templates/
+    cat ./templates/publishPactFiles.sh
     pwd
     ./templates/publishPactFiles.sh
   displayName: ✉️  Publish Pacts
