--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,9 @@ steps:
     pactfiles: pacts
     broker_url: $(PACT_BROKER_BASE_URL)
     token: $(PACT_BROKER_TOKEN)
+    branch: $(BRANCH)
+    commit: $(COMMIT)
+    build_uri: $(BUILD_URI)
 - template: templates/azure_pact_can_i_deploy.yml
 - template: templates/azure_pact_record_deployment.yml
 
