--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,10 +8,10 @@ pool:
 variables:
   PACTICIPANT: "pactflow-example-consumer-dotnet"
   PACT_BROKER_BASE_URL: https://testdemo.pactflow.io
-  template: templates/azure_pact_variables.yml
-  # BRANCH: $[replace(variables['Build.SourceBranch'], 'refs/heads/', '')]
-  # COMMIT: $(Build.SourceVersion)
-  # BUILD_URI: '$(System.CollectionUri)$(System.TeamProject)/_build/results?buildId=$(Build.BuildId)'
+  # template: templates/azure_pact_variables.yml
+  BRANCH: $[replace(variables['Build.SourceBranch'], 'refs/heads/', '')]
+  COMMIT: $(Build.SourceVersion)
+  BUILD_URI: '$(System.CollectionUri)$(System.TeamProject)/_build/results?buildId=$(Build.BuildId)'
 
 steps:
 - script: |
