--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,9 +6,11 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  PACTICIPANT: "pactflow-example-consumer-dotnet"
-  PACT_BROKER_BASE_URL: https://testdemo.pactflow.io
-  template: templates/azure_pact_variables.yml@self
+  - template: templates/azure_pact_variables.yml@self
+  - name: PACTICIPANT
+    value: "pactflow-example-consumer-dotnet"
+  - name: PACT_BROKER_BASE_URL
+    value: https://testdemo.pactflow.io
   # BRANCH: $[replace(variables['Build.SourceBranch'], 'refs/heads/', '')]
   # COMMIT: $(Build.SourceVersion)
   # BUILD_URI: '$(System.CollectionUri)$(System.TeamProject)/_build/results?buildId=$(Build.BuildId)'
