--- a/templates/azure_pact_can_i_deploy_with_params.yml
+++ b/templates/azure_pact_can_i_deploy_with_params.yml
@@ -49,12 +49,12 @@ steps:
     PACT_BROKER_USERNAME: ${{ coalesce(parameters.username, variables.PACT_BROKER_USERNAME) }}
     PACT_BROKER_PASSWORD: ${{ coalesce(parameters.password, variables.PACT_BROKER_PASSWORD) }}
     COMMIT: ${{ coalesce(parameters.version, variables.COMMIT) }}
-    application_name: ${{ coalesce(parameters.application_name || variables.application_name }}
-    to_environment: ${{ coalesce(parameters.to_environment || variables.to_environment }}
-    to: ${{ coalesce(parameters.to || variables.to }}
+    application_name: ${{ coalesce(parameters.application_name , variables.application_name }}
+    to_environment: ${{ coalesce(parameters.to_environment , variables.to_environment }}
+    to: ${{ coalesce(parameters.to , variables.to }}
     latest: ${{ parameters.latest }}
-    retry_while_unknown: ${{ coalesce(parameters.retry_while_unknown || variables.retry_while_unknown }}
-    retry_interval: ${{ coalesce(parameters.retry_interval || variables.retry_interval }}
+    retry_while_unknown: ${{ coalesce(parameters.retry_while_unknown , variables.retry_while_unknown }}
+    retry_interval: ${{ coalesce(parameters.retry_interval , variables.retry_interval }}
     dry_run: ${{ parameters.dry_run }}
     branch: ${{ parameters.branch }}
     main_branch: ${{ parameters.main_branch }}
