ci(azure): broker url mark as not req

--- a/templates/azure_pact_can_i_deploy_with_params.yml
+++ b/templates/azure_pact_can_i_deploy_with_params.yml
@@ -5,6 +5,7 @@
 
 parameters:
   - name: broker_url # "The url of your pact broker"
+    default: ""
   - name: token # "Your pact broker token (required for PactFlow)"
     default: ""
   - name: username # "Your pact broker username"
