--- a/templates/azure_pact_record_deployment_with_params.yml
+++ b/templates/azure_pact_record_deployment_with_params.yml
@@ -4,6 +4,7 @@
 # description: "Record deployment of an application to an environment"
 parameters:
   - name: broker_url # "The url of your pact broker"
+    default: ""
   - name: token # "Your pact broker token (required for PactFlow)"
     default: ""
   - name: username # "Your pact broker username"
