--- a/templates/azure_pact_record_deployment_with_params.yml
+++ b/templates/azure_pact_record_deployment_with_params.yml
@@ -21,6 +21,7 @@ parameters:
     # a logical identifer required to differentiate deployments when there are multiple instances of the same application in an environment."
     default: ""
 
+steps:
 - script: |
     ./templates/scripts/recordDeployment.sh
   displayName: Record Deployment
